--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Pg6RZdGxjOSUgh5uMvRonQ
+# Checksum: gGcpMHH6DIVENX3FuZvJcg
 # Updated: 14 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -903,6 +903,7 @@
 .oasfile.
 .oclus.com/
 .onads.com/
+.oneclicktube.com/hover.
 .onenetworkdirect.
 .onhercam.com/dev/banners/
 .onlymelbourne.com.au/image/banner
@@ -912,7 +913,6 @@
 .opinionbar.com/popups/
 .org/ad/
 .org/ads/
-.oneclicktube.com/hover.
 .ospreymedialp.
 .otcash.com/images/
 .overclockers.co.uk/home_banners/
@@ -1589,7 +1589,6 @@
 /ads-2.js
 /Ads-banner
 /ads-new.
-/ads_bg.
 /ads.asp?
 /ads.aspx?
 /ads.dll/
@@ -1646,6 +1645,7 @@
 /ads?apid
 /ads?id
 /ads?spaceid
+/ads_bg.
 /ads_iframe.
 /ads_php/
 /ads_view.
@@ -1934,9 +1934,9 @@
 /eporner-banner-
 /ept_in.php?
 /ero-ads-
+/ero_hosted_
 /eroad.php
 /eroadvertorial
-/ero_hosted_
 /erobanner.
 /esel.js
 /eshopoffer.asp
@@ -2294,9 +2294,9 @@
 /RequestAdvertisement.
 /richOAS.
 /right_ad.
+/right_adengage.
 /rightad.
 /rightads.
-/right_adengage.
 /rightbanner/
 /rotating_banner.php
 /rotatingtextad
@@ -3436,6 +3436,7 @@ http://s.trigami.
 http://s.xvideos.com/
 http://sa-m.streamads.com/view?
 http://sa.entireweb.com/
+http://safemanuals.com/shopping/
 http://scripts.atmalinks.com/
 http://search.spotxchange.com/flash/
 http://servali.net/
