bin-layer fixes

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: gGcpMHH6DIVENX3FuZvJcg
+# Checksum: 3rQGMbO9wBFIyz/DZarzXg
 # Updated: 14 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1848,7 +1848,6 @@
 /bigtopl.swf
 /bilder/anzeige
 /bilder/promo
-/bin-layer.
 /bizbannerre
 /blog/ads/
 /blogads
