--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 3rQGMbO9wBFIyz/DZarzXg
-# Updated: 14 Jul 2010
+# Checksum: ZbAhjK1T1layYATZab6j0Q
+# Updated: 16 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -10,6 +10,7 @@
 ,468x60;
 ,728x90,
 ,970x90;
+160x6001
 -120x240.
 -120x300.
 -120x400.
@@ -19,6 +20,7 @@
 -160-600.
 -160x120_
 -160x160.
+-160X600b
 -160x400-
 -160x600-
 -160x600.
