--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ZbAhjK1T1layYATZab6j0Q
+# Checksum: lXPdP+Zo0DBWPxdzS1JrKQ
 # Updated: 16 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -550,6 +550,7 @@
 .exponential.
 .eyereturn.
 .falkag.
+.fatbackmedia.com/assets/
 .fapgames.com/videoads/
 .fastclick.net/
 .feedsportal.com/r/
