--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: lXPdP+Zo0DBWPxdzS1JrKQ
+# Checksum: HsgArsoPIfgBk1XRtg0W8Q
 # Updated: 16 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2326,6 +2326,7 @@
 /services/ads/
 /Share/ads/
 /share/ads/
+/shared/ads/
 /shared/ad_
 /shortmediads/
 /show-ad.php?
