--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: HsgArsoPIfgBk1XRtg0W8Q
-# Updated: 16 Jul 2010
+# Checksum: 3YeNvVXvISs1ZrdVf9PENA
+# Updated: 17 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -10,7 +10,6 @@
 ,468x60;
 ,728x90,
 ,970x90;
-160x6001
 -120x240.
 -120x300.
 -120x400.
@@ -20,10 +19,10 @@
 -160-600.
 -160x120_
 -160x160.
--160X600b
 -160x400-
 -160x600-
 -160x600.
+-160X600b
 -180x250.
 -180x60.
 -234x60-
@@ -550,9 +549,9 @@
 .exponential.
 .eyereturn.
 .falkag.
-.fatbackmedia.com/assets/
 .fapgames.com/videoads/
 .fastclick.net/
+.fatbackmedia.com/assets/
 .feedsportal.com/r/
 .fftube.com/banners/
 .filecabi.net/crons/friends-
@@ -2033,6 +2032,7 @@
 /googleAds.
 /GoogleAdsConnect
 /GoogleAdsense
+/googleafs.js
 /gopro_interstitial.
 /gui2/mubanner
 /headerAdvert
@@ -2326,8 +2326,8 @@
 /services/ads/
 /Share/ads/
 /share/ads/
-/shared/ads/
 /shared/ad_
+/shared/ads/
 /shortmediads/
 /show-ad.php?
 /show.cgi?adp
@@ -2506,6 +2506,7 @@
 160x600.jpg
 160x600.png
 160x600.swf
+160x6001
 175x175.gif
 180x300.gif
 180x600-
