--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 3YeNvVXvISs1ZrdVf9PENA
+# Checksum: v62wEx9YXOoeFG9blU9K3A
 # Updated: 17 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3385,7 +3385,7 @@ http://pic.adbrite.com/
 http://pics.firstload.
 http://pics.rbc.ru/
 http://pixxtra.com/ad/
-http://pixxtra.com/js/popup.js
+http://pixxtra.com/js/popup
 http://plantaosexy.com/
 http://playlist.yahoo.com/makeplaylist.dll?
 http://pmsrvr.com/click/display
