--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: v62wEx9YXOoeFG9blU9K3A
+# Checksum: m0QBw0GJk4Jz2OrDpnhl4A
 # Updated: 17 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3386,6 +3386,7 @@ http://pics.firstload.
 http://pics.rbc.ru/
 http://pixxtra.com/ad/
 http://pixxtra.com/js/popup
+http://pixxtra.com/sound/
 http://plantaosexy.com/
 http://playlist.yahoo.com/makeplaylist.dll?
 http://pmsrvr.com/click/display
