--- a/easylistfanboy/iron/adblock-trk.ini
+++ b/easylistfanboy/iron/adblock-trk.ini
@@ -34,6 +34,7 @@
 .milliyet.com.tr/d/f/1/
 .ntvmsnbc.com/adv/
 .ogile.com/banner
+.posta.com.tr/d/f/advertorial/
 .r10.net/reklam
 .realist.gen.tr/125
 .realist.gen.tr/777
