--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: m0QBw0GJk4Jz2OrDpnhl4A
+# Checksum: Kx5eRC8oGMiR662onH1i0w
 # Updated: 17 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3400,7 +3400,6 @@ http://profile.bharatmatrimony.com/
 http://promo.bauermedia.co.uk/
 http://promo.cams.
 http://promo.pegcweb.com/
-http://promo.twistyscash.
 http://promo.ulust.com/
 http://promos.
 http://promos.fling.
