--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Kx5eRC8oGMiR662onH1i0w
+# Checksum: mFyFCw8UVVHvpUikhsSYxQ
 # Updated: 17 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3401,7 +3401,6 @@ http://promo.bauermedia.co.uk/
 http://promo.cams.
 http://promo.pegcweb.com/
 http://promo.ulust.com/
-http://promos.
 http://promos.fling.
 http://promos.meetlocals.com/
 http://promos.naked.
