--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: mFyFCw8UVVHvpUikhsSYxQ
+# Checksum: ktrny6YPFJyvvT7suRUchw
 # Updated: 17 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -14,6 +14,7 @@
 -120x300.
 -120x400.
 -120x600.
+-120x600c
 -125x40-
 -130x600
 -160-600.
@@ -3149,7 +3150,7 @@ http://banner.atomicgamer.com/
 http://banner.play-asia.com/
 http://banner.themediaplanets.
 http://banner1.
-http://banners.
+http://banners.penthouse.com/
 http://banners.adultfriendfinder.
 http://banners.adventory.com/
 http://banners.alt.com/
