--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ktrny6YPFJyvvT7suRUchw
+# Checksum: 4z2fmdrABT9W60wqllULrQ
 # Updated: 17 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -839,6 +839,7 @@
 .moregamers.
 .mporatrons.com/loadres/images/sponsored/
 .mrskin.com/js_feeds.
+.mrskin.com/feeds/
 .mrskincash.com/
 .msads.net/
 .msquaredproductions.com/
