--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 4z2fmdrABT9W60wqllULrQ
+# Checksum: 15RFj8lP3P1wYmQBl0754A
 # Updated: 17 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1200,6 +1200,7 @@
 .weselectmodels.com/ZillionaireDate_Banner/
 .weselltraffic.
 .wgreatdream.com/
+.whackedmedia.com/
 .whaleads.com/
 .wibiya.com/toolbarLoader.php?
 .widgetbucks.
@@ -2435,6 +2436,8 @@
 /topad.htm
 /topads.aspx?
 /topads/
+/topadfooter.
+/topadheader.
 /tplimage
 /travidia/
 /triadshow.asp?
