--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 15RFj8lP3P1wYmQBl0754A
+# Checksum: mDxE7ptN3FslE6qjoG7i5Q
 # Updated: 17 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -840,6 +840,7 @@
 .mporatrons.com/loadres/images/sponsored/
 .mrskin.com/js_feeds.
 .mrskin.com/feeds/
+.mrskincdn.com/assets/widgets/
 .mrskincash.com/
 .msads.net/
 .msquaredproductions.com/
