--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: mDxE7ptN3FslE6qjoG7i5Q
+# Checksum: 3U47mrUjRXPB407Jm23haA
 # Updated: 17 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -930,6 +930,7 @@
 .panachetech.
 .paperg.com/
 .partnercash.de/
+.partners.betus.com/
 .partypoker.com/hp_landing
 .pcpro.co.uk/images/skins/
 .pcr-online.biz/static/banners/
