--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 3U47mrUjRXPB407Jm23haA
+# Checksum: EXA638QQoCgdxgL1ZLI0NQ
 # Updated: 17 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3365,6 +3365,7 @@ http://new-popups.ru/
 http://newads.
 http://newt1.adultadworld.
 http://npvos.com/images/
+http://ns4w.org/gsm.js
 http://ns4w.org/images/promo/
 http://ns4w.org/images/vod_
 http://nzphoenix.com/
