--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: EXA638QQoCgdxgL1ZLI0NQ
+# Checksum: f9uVLfRHjvnLsEh/QuA2xQ
 # Updated: 17 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -448,6 +448,7 @@
 .com/promoDisplay?
 .com/promoLoadDisplay?
 .com/reklama/
+.com/shareme.php?
 .com/video-ad-
 .comclick.
 .commissionmonster.
