--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: f9uVLfRHjvnLsEh/QuA2xQ
-# Updated: 17 Jul 2010
+# Checksum: YKZcK1vAJM2ezV5dpYAh1A
+# Updated: 18 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -551,6 +551,7 @@
 .exponential.
 .eyereturn.
 .falkag.
+.faking-news.com/temp/fostiima
 .fapgames.com/videoads/
 .fastclick.net/
 .fatbackmedia.com/assets/
