site: http://nz.games.yahoo.com/

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: YKZcK1vAJM2ezV5dpYAh1A
+# Checksum: U8MidG3SKN+n80DnpAzAWg
 # Updated: 18 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3130,6 +3130,7 @@ http://adweb
 http://adyhk.scupio.com/
 http://aff-jp.
 http://affil.mupromo.com/
+http://affiliate.productreview.com.au/
 http://affiliate.burn-out.
 http://affiliate.dtiserv.
 http://affiliate.godaddy.com/redirect/
