--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -461,6 +461,7 @@
 .providesupport.com/cmd/verio?
 .proximic.com/
 .prtracker.com/
+.publishflow.com/
 .pureairhits.
 .qualtrics.com/
 .quantserve.com/api/
