--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: U8MidG3SKN+n80DnpAzAWg
+# Checksum: wDfQOhNHoY3uqTHGtA5EEg
 # Updated: 18 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -65,6 +65,7 @@
 -banner-ad
 -banner.swf?
 -fleshlight
+-leaderboard-ad-
 -tebya-na-dosuge.com/
 -third-ad.
 .123advertising.nl/
