remove dimensions rule r2

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: wDfQOhNHoY3uqTHGtA5EEg
+# Checksum: gOpGPFTiHvKT/Fz0uD8Pag
 # Updated: 18 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1288,7 +1288,6 @@
 /160x600
 /170x700.
 /175x250_
-/178x134/
 /180x150-
 /180x150/
 /184x100_
