--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: gOpGPFTiHvKT/Fz0uD8Pag
-# Updated: 18 Jul 2010
+# Checksum: iUvJQdekaVia5AV5NR2Kmg
+# Updated: 19 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -551,8 +551,8 @@
 .expertreviews.co.uk/images/skins/
 .exponential.
 .eyereturn.
-.falkag.
 .faking-news.com/temp/fostiima
+.falkag.
 .fapgames.com/videoads/
 .fastclick.net/
 .fatbackmedia.com/assets/
@@ -841,10 +841,10 @@
 .money4ad.com
 .moregamers.
 .mporatrons.com/loadres/images/sponsored/
-.mrskin.com/js_feeds.
 .mrskin.com/feeds/
-.mrskincdn.com/assets/widgets/
+.mrskin.com/js_feeds.
 .mrskincash.com/
+.mrskincdn.com/assets/widgets/
 .msads.net/
 .msquaredproductions.com/
 .mumbaimirror.com/ads/
@@ -2438,10 +2438,10 @@
 /top_adv_
 /TopAd.aspx
 /topad.htm
-/topads.aspx?
-/topads/
 /topadfooter.
 /topadheader.
+/topads.aspx?
+/topads/
 /tplimage
 /travidia/
 /triadshow.asp?
@@ -3130,10 +3130,10 @@ http://adweb
 http://adyhk.scupio.com/
 http://aff-jp.
 http://affil.mupromo.com/
-http://affiliate.productreview.com.au/
 http://affiliate.burn-out.
 http://affiliate.dtiserv.
 http://affiliate.godaddy.com/redirect/
+http://affiliate.productreview.com.au/
 http://affiliates.homestead.com/
 http://affiliates.jlist.
 http://affiliates.market-ace.com/
@@ -3159,7 +3159,6 @@ http://banner.atomicgamer.com/
 http://banner.play-asia.com/
 http://banner.themediaplanets.
 http://banner1.
-http://banners.penthouse.com/
 http://banners.adultfriendfinder.
 http://banners.adventory.com/
 http://banners.alt.com/
@@ -3170,6 +3169,7 @@ http://banners.itweb.co.za/
 http://banners.ixitools.
 http://banners.moreniche.com/show.
 http://banners.partypartners.com/
+http://banners.penthouse.com/
 http://banners.rushcommerce.com/
 http://banners.videosz.com/
 http://banners.webcams.com/
@@ -3432,6 +3432,7 @@ http://rcm-uk.amazon.
 http://rcm.amazon.
 http://redirects.coldhardcash.com/
 http://redvase.bravenet.
+http://rek.adtotal.pl/
 http://reklam.
 http://reklama.
 http://resources.infolinks.
