--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: iUvJQdekaVia5AV5NR2Kmg
-# Updated: 19 Jul 2010
+# Checksum: /YEQpvN2BBlHcUTVGl37eQ
+# Updated: 20 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2598,7 +2598,6 @@
 800x120.gif
 80x468.jpg
 972_70.gif
-;sz=1x1,
 ;sz=300x60
 =120x240;
 =120x600,
