--- a/easylistfanboy/iron/adblock-cz.ini
+++ b/easylistfanboy/iron/adblock-cz.ini
@@ -1,4 +1,7 @@
 # cz (Iron-Chrome)
+.cz/aff/
+.cz/ads/
+.cz/js/ad/
 .admatik.pl/
 .admarket.cz/
 .adtaily.pl/
@@ -12,6 +15,7 @@
 .cz/img/banner
 .cz/reklama/
 .cz/rs/get-iframe.php?
+.cz/etarget/
 .espoluprace.cz/affiliate/
 .hit.gemius.pl/
 .idnes.cz/js/ad/
@@ -24,8 +28,10 @@
 .parabola.cz/img_inzerent/flash_
 .seznam.cz/ad/
 .sk/img/banner
+.swf?clickthru
 .takeit.idnes.cz/
 .waudit.cz/
+/a_adv.dat?
 /ad/takeover/
 /adrun.dll?
 /Advert.Gemius.
@@ -33,20 +39,23 @@
 /get_stat.php?
 /getbanner.aspx?
 /images/reklama/
-/img/reklama.
 /img/reklama/
-/img/reklama_
 /ImgLib/bannery/
+/reklama.
+/reklama_
 /reklama-
 /reklamy.
+/reklama3.
 /scripts/clickjs
 /showad.fcgi?
 /site-advert.js
 /usrtrck-new.php?
 /x-cz/rek/
 _clickthru.swf?
+http://217.11.235.120/
 http://ad.adfox.cz/
 http://ad.seznam.cz/
+http://ad.surtep.cz/
 http://b.lookit.cz/
 http://b.thebestlinks.com/button.cgi?
 http://banners.onebit.cz/
@@ -66,4 +75,5 @@ http://p1.naj.sk/code?site=
 http://script.zebricek.cz/
 http://stat.novinky.cz/
 http://stat.sport.cz/
+http://toplist.cz/
 http://top-sk.mconet.biz//js/best_top2_js.php?
