--- a/easylistfanboy/iron/adblock-cz.ini
+++ b/easylistfanboy/iron/adblock-cz.ini
@@ -23,6 +23,7 @@
 .im.cz/ad/
 .intext.billboard.
 .lt/banner/
+.monitoring-serveru.cz/
 .naseadresa.cz/cz/
 .observer.cz/?
 .parabola.cz/img_inzerent/flash_
@@ -75,6 +76,5 @@ http://p1.naj.sk/code?site=
 http://script.zebricek.cz/
 http://stat.novinky.cz/
 http://stat.sport.cz/
-http://statistiky.monitoring-serveru.cz/
 http://toplist.cz/
 http://top-sk.mconet.biz//js/best_top2_js.php?
