--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: /YEQpvN2BBlHcUTVGl37eQ
+# Checksum: XzMfRyLnb31a/gmL/Lv7uQ
 # Updated: 20 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1342,6 +1342,8 @@
 /468x80_
 /468x80b
 /468x80g
+/468x60w
+/468x60l
 /470x030
 /475x150-
 /480x030_
