--- a/easylistfanboy/iron/adblock-cz.ini
+++ b/easylistfanboy/iron/adblock-cz.ini
@@ -25,6 +25,7 @@
 .intext.billboard.
 .lt/banner/
 .monitoring-serveru.cz/
+.mylivepage.com/cerounts/
 .naseadresa.cz/cz/
 .observer.cz/?
 .parabola.cz/img_inzerent/flash_
