--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: XzMfRyLnb31a/gmL/Lv7uQ
+# Checksum: rebIsTKmQrJbaN1FRvvhFg
 # Updated: 20 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -575,6 +575,7 @@
 .fling.com/enter.
 .flipflapflo.info/
 .flipflapflo.net/
+.flixstertomatoes.com/files/inc_beta/rt_jquery_v2.
 .fmonster.ff.nsg.org.ua/
 .fmpub.net/
 .fncash.com/
