--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: rebIsTKmQrJbaN1FRvvhFg
+# Checksum: LxO31+NKDvAZlzYIPA3S3g
 # Updated: 20 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1493,6 +1493,7 @@
 /ad_wide_
 /ad_wrapper
 /adaffiliate_
+/ads_v2.
 /adaptvAdPlayer.js
 /adbanner.
 /adbanner/
