--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: LxO31+NKDvAZlzYIPA3S3g
-# Updated: 20 Jul 2010
+# Checksum: NRQ6JXNctE4L8HeVBzo+AA
+# Updated: 21 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1559,7 +1559,6 @@
 /adjs/iframe
 /adjs_mod
 /adjuggler
-/adkit/js/
 /adlabel_horz
 /adlayer
 /adlink.gif
