--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: NRQ6JXNctE4L8HeVBzo+AA
+# Checksum: KvEtUEw12wrMR5Fei28aKw
 # Updated: 21 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1713,6 +1713,7 @@
 /adSwap.js
 /adsWrapper.js
 /adsx/www/
+/adstubs/
 /adsync/
 /adsystem.
 /adsystem/
