--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: KvEtUEw12wrMR5Fei28aKw
+# Checksum: P8zVFgo54A3/6/OfqKSJHg
 # Updated: 21 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1448,6 +1448,7 @@
 /ad728x15
 /ad?sponsor
 /ad_350x
+/ad_area.
 /AD_Banner
 /ad_banner
 /ad_base.
@@ -3354,6 +3355,8 @@ http://media303.com/
 http://medialand.relax.ru/code?
 http://medrx.sensis.com.au/
 http://megacash.
+http://megavideo.com/unruley
+http://megavideo.com/goviral
 http://mfeed.newzfind.com/
 http://mg.dt00.net/
 http://minibn.ipmart.com/
