--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: P8zVFgo54A3/6/OfqKSJHg
+# Checksum: pFVwg+300YzS54/grGl06w
 # Updated: 21 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -279,6 +279,7 @@
 .asp?coad
 .assoc-amazon.
 .astrolabio.
+.asianewsnet.net/banner/
 .at.atwola.com/
 .atwola.com/addyn/
 .atwola.com/html/
