--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: pFVwg+300YzS54/grGl06w
-# Updated: 21 Jul 2010
+# Checksum: 9RMfjHHoRHk0VAOLhUOnRA
+# Updated: 22 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1756,6 +1756,7 @@
 /adx/gamestar.
 /adx2.js
 /aff-exchange/
+/aff.htm
 /aff.html
 /AFF/Banners/
 /affbanner/
