--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 9RMfjHHoRHk0VAOLhUOnRA
+# Checksum: vkJUrRBAmcZeIwycYt4NFQ
 # Updated: 22 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -560,7 +560,8 @@
 .feedsportal.com/r/
 .fftube.com/banners/
 .filecabi.net/crons/friends-
-.filecabi.net/livevideoframe.
+.filecabi.net/livevideo
+.filecabi.net/728
 .fileporn.org/225x225_
 .fileporn.org/banner
 .filetarget.
