--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: vkJUrRBAmcZeIwycYt4NFQ
+# Checksum: nnrZJ8z1I2p6zr9fBDP3RQ
 # Updated: 22 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1959,6 +1959,7 @@
 /etology.
 /event.ng/Type
 /ewtrack.gif?
+/exitpop.js
 /exit_popup.
 /external/ads/
 /external_ads.
