--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: nnrZJ8z1I2p6zr9fBDP3RQ
+# Checksum: knZm/uhHCas5UcfSf+Zttw
 # Updated: 22 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3518,6 +3518,7 @@ http://traffic.liveuniversenetwork.
 http://traffic4adult.com/generate.
 http://trafficcdn.liveuniversenetwork.com/
 http://ts.richmedia.yahoo.com/
+http://tck.bangbros.com/
 http://turboshare.com/images/banner-
 http://u-ads.adap.tv/
 http://unicast.ign.com/assets/
