--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: knZm/uhHCas5UcfSf+Zttw
-# Updated: 22 Jul 2010
+# Checksum: DyGKwtIrCja0Qq/xMH32PQ
+# Updated: 21 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -275,11 +275,11 @@
 .arcadebanners.
 .asg.to/ad/
 .ashleymadison.com/flashbanner/
+.asianewsnet.net/banner/
 .askjolene.com/endroll.php?
 .asp?coad
 .assoc-amazon.
 .astrolabio.
-.asianewsnet.net/banner/
 .at.atwola.com/
 .atwola.com/addyn/
 .atwola.com/html/
@@ -559,9 +559,9 @@
 .fatbackmedia.com/assets/
 .feedsportal.com/r/
 .fftube.com/banners/
+.filecabi.net/728
 .filecabi.net/crons/friends-
 .filecabi.net/livevideo
-.filecabi.net/728
 .fileporn.org/225x225_
 .fileporn.org/banner
 .filetarget.
@@ -1338,15 +1338,15 @@
 /468x60_
 /468x60a
 /468x60b
+/468x60l
 /468x60p
 /468X60t
+/468x60w
 /468x80-
 /468x80/
 /468x80_
 /468x80b
 /468x80g
-/468x60w
-/468x60l
 /470x030
 /475x150-
 /480x030_
@@ -1496,7 +1496,6 @@
 /ad_wide_
 /ad_wrapper
 /adaffiliate_
-/ads_v2.
 /adaptvAdPlayer.js
 /adbanner.
 /adbanner/
@@ -1663,6 +1662,7 @@
 /ads_bg.
 /ads_iframe.
 /ads_php/
+/ads_v2.
 /ads_view.
 /ADSAdClient31.dll?
 /adscript.php?
@@ -1713,10 +1713,10 @@
 /AdsTemplate/
 /adstop.
 /adstorage.
+/adstubs/
 /adSwap.js
 /adsWrapper.js
 /adsx/www/
-/adstubs/
 /adsync/
 /adsystem.
 /adsystem/
@@ -1959,8 +1959,8 @@
 /etology.
 /event.ng/Type
 /ewtrack.gif?
-/exitpop.js
 /exit_popup.
+/exitpop.js
 /external/ads/
 /external_ads.
 /extraMustard_topperIntro_
@@ -3359,8 +3359,8 @@ http://media303.com/
 http://medialand.relax.ru/code?
 http://medrx.sensis.com.au/
 http://megacash.
-http://megavideo.com/unruley
 http://megavideo.com/goviral
+http://megavideo.com/unruley
 http://mfeed.newzfind.com/
 http://mg.dt00.net/
 http://minibn.ipmart.com/
@@ -3501,6 +3501,7 @@ http://synad2.
 http://syndication.jobthread.
 http://tag.regieci.com/
 http://target.vivid.
+http://tck.bangbros.com/
 http://teasernet.ru/show/
 http://teaservizio.com/block.js
 http://themis.
@@ -3518,7 +3519,6 @@ http://traffic.liveuniversenetwork.
 http://traffic4adult.com/generate.
 http://trafficcdn.liveuniversenetwork.com/
 http://ts.richmedia.yahoo.com/
-http://tck.bangbros.com/
 http://turboshare.com/images/banner-
 http://u-ads.adap.tv/
 http://unicast.ign.com/assets/
@@ -3569,6 +3569,7 @@ http://www.porno-file.ru/uploads/
 http://www.pro-clockers.com/images/banners/
 http://www.proxies2u.com/images/btn/
 http://www.proxyroll.com/proxybanner.
+http://www.regnow.com/
 http://www.rejournal.com/images/banners/
 http://www.rejournal.com/ne/images/homepage
 http://www.rejournal.com/users/Blinks/
