--- a/easylistfanboy/iron/adblock-cz.ini
+++ b/easylistfanboy/iron/adblock-cz.ini
@@ -20,6 +20,7 @@
 .cz/etarget/
 .espoluprace.cz/affiliate/
 .hit.gemius.pl/
+.hry.cz/t/h/ad/
 .idnes.cz/js/ad/
 .idnes.cz/r.asp?
 .im.cz/ad/
@@ -35,6 +36,7 @@
 .swf?clickthru
 .takeit.idnes.cz/
 .waudit.cz/
+/ad.1.js
 /a_adv.dat?
 /ad/takeover/
 /advantage.
