--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: DyGKwtIrCja0Qq/xMH32PQ
-# Updated: 21 Jul 2010
+# Checksum: mhRedhSXJ4rn3CpBWiAf5Q
+# Updated: 22 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1487,6 +1487,7 @@
 /ad_right_
 /AD_Rotator
 /ad_server/
+/ad_servlet.pl?
 /ad_show.js
 /ad_slide
 /ad_square_
@@ -1579,6 +1580,7 @@
 /adnetmedia.
 /adng.html?
 /adotube_adapter.
+/adp.html
 /adpage.htm
 /adpanelcontent.
 /adpeeps
