--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: mhRedhSXJ4rn3CpBWiAf5Q
+# Checksum: aaDcpFfCk3q+tCxAMlsI9g
 # Updated: 22 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1487,7 +1487,7 @@
 /ad_right_
 /AD_Rotator
 /ad_server/
-/ad_servlet.pl?
+/ad_servlet.
 /ad_show.js
 /ad_slide
 /ad_square_
