--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: aaDcpFfCk3q+tCxAMlsI9g
+# Checksum: WtcoFFyN5/3FVuQXxzFs4g
 # Updated: 22 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3201,6 +3201,7 @@ http://box.shopoon.fr/
 http://br.realitykings.com/
 http://br.rk.com/
 http://bugaga.tut.by/
+http://burnsoftware.info/
 http://bwp.
 http://c.castanet.net/
 http://c.porngraph.
@@ -3350,6 +3351,7 @@ http://live-add.com/banner/
 http://lubetube.com/banners/
 http://lubetube.com/images/cubebanners/
 http://luxup.ru/show/
+http://lw1.cdmediaworld.com/
 http://lwken.com/images/
 http://lxtrack.com/
 http://m.shanbara.jp/
