--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: WtcoFFyN5/3FVuQXxzFs4g
-# Updated: 22 Jul 2010
+# Checksum: y5Qd3hJMkA0Nu1OJYpXIJA
+# Updated: 23 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -3440,6 +3440,7 @@ http://pussycash.com/Content/Banners/
 http://pwp.netcabo.
 http://qdmil.com/images/
 http://queronamoro.com/banners/
+http://squadedit.com/img/peanuts/
 http://r.radikal.ru/
 http://rad.microsoft.
 http://rcm-uk.amazon.
