--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: WtcoFFyN5/3FVuQXxzFs4g
+# Checksum: B5SyL2Nakcqzf7RQue1LNg
 # Updated: 22 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2124,6 +2124,8 @@
 /imlive.gif
 /imp.ads/
 /impopup/
+/include/AD/
+/include/ad/
 /include/ad_
 /include/ads/
 /include/adsdaq
