--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: cXs7q/wrz/33V1ONj+Q7jw
-# Updated: 22 Jul 2010
+# Checksum: CtN7iboF0P+yovE1Wnqj6A
+# Updated: 23 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1952,6 +1952,7 @@
 /eporner-banner-
 /ept_in.php?
 /ero-ads-
+/ero-ads_
 /ero_hosted_
 /eroad.php
 /eroadvertorial
