--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: CtN7iboF0P+yovE1Wnqj6A
+# Checksum: WRcNUSyuPeHsmQGy5diAow
 # Updated: 23 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -650,6 +650,7 @@
 .hotgoos.com/ad/
 .hotkeys.com/
 .hotlog.ru/
+.hornypharaoh.com/banner_
 .hover.in/
 .hsmclick.com/
 .html?wpl=
@@ -1214,6 +1215,7 @@
 .widgetbucks.
 .wildamaginations.com/mdm/
 .worldmag.com/images/media/
+.worldsex.com/c/
 .ws/banners/
 .wsex.com/mediaserver/
 .wtfpeople.com/banners_
