--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: WRcNUSyuPeHsmQGy5diAow
+# Checksum: jypJqTqJlvps44Z36heDZg
 # Updated: 23 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1033,6 +1033,7 @@
 .serving-sys.
 .sex-techniques-and-positions.com/banners1a1/
 .sex-techniques-and-positions.com/banners2/
+.sexycelebritygallery.com/mrniceguy.js
 .sexcounter.
 .sexlist.com
 .sexplaycam.com/geobanners/
