--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: jypJqTqJlvps44Z36heDZg
+# Checksum: KTJspcNXW0TKMaxkMWNPsA
 # Updated: 23 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3130,6 +3130,7 @@ http://adsys.
 http://adtag.
 http://adtc.daum.net/
 http://adtech.panthercustomer.com/images/
+http://adtools.gossipkings.com/
 http://adtology
 http://adult3dcomics.com/
 http://adultfriendfinder.com/
