--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: KTJspcNXW0TKMaxkMWNPsA
+# Checksum: PSo2PrweT2E5jhTjg64IVg
 # Updated: 23 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -17,6 +17,8 @@
 -120x600c
 -125x40-
 -130x600
+-120x600-
+_120_600_
 -160-600.
 -160x120_
 -160x160.
@@ -3221,6 +3223,7 @@ http://cash.femjoy.com/
 http://cash4movie.com/bilder/
 http://cashad2
 http://cashtraff.com/selljs/
+http://celebritypink.com/bannedcelebs-
 http://cdn.assets.
 http://cdn.cpmstar.com/
 http://cdn.doubleclick.
