--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: PSo2PrweT2E5jhTjg64IVg
+# Checksum: s1CRYT9sZyWKeWW84xs71g
 # Updated: 23 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3341,6 +3341,7 @@ http://js.picsomania.info/
 http://jsads.
 http://jsg.dt00.net/
 http://kaktuz.com/banner/
+http://kenny-glenn.net/images/longbanner_
 http://kermit.macnn.com/?DC
 http://kinopokaz.org/
 http://kliklink.ru/get.js?user_id=
