--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: s1CRYT9sZyWKeWW84xs71g
+# Checksum: 0khQfeXZmAA4S66kGt5tuQ
 # Updated: 23 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3133,6 +3133,7 @@ http://adtag.
 http://adtc.daum.net/
 http://adtech.panthercustomer.com/images/
 http://adtools.gossipkings.com/
+http://adult-profit-files.com/banner
 http://adtology
 http://adult3dcomics.com/
 http://adultfriendfinder.com/
