--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 0khQfeXZmAA4S66kGt5tuQ
+# Checksum: 3Pyhm6Si1aZjyElTidmyEA
 # Updated: 23 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1290,6 +1290,7 @@ _120_600_
 /160-600-
 /160_600.
 /160_600_
+/600_120_
 /160x200.jpg
 /160x400-
 /160x400_
