--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 3Pyhm6Si1aZjyElTidmyEA
+# Checksum: 3xqpM5SmEvm6koPMYjpEeg
 # Updated: 23 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1046,6 +1046,7 @@ _120_600_
 .share-server.com/
 .shareasale.com/image/
 .shareresults.
+.shinypics.com/blogbanner/
 .shooshtime.com/adfiles/
 .shooshtime.com/images/chosenplugs/
 .shortcuts.search.
