--- a/easylistfanboy/iron/adblock-cz.ini
+++ b/easylistfanboy/iron/adblock-cz.ini
@@ -30,6 +30,7 @@
 .mylivepage.com/cerounts/
 .naseadresa.cz/cz/
 .observer.cz/?
+.pagerank.cz/
 .parabola.cz/img_inzerent/flash_
 .seznam.cz/ad/
 .sk/img/banner
