--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 3xqpM5SmEvm6koPMYjpEeg
+# Checksum: iysgXvuN6aYAuIGvODGzqg
 # Updated: 23 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -13,12 +13,11 @@
 -120x240.
 -120x300.
 -120x400.
+-120x600-
 -120x600.
 -120x600c
 -125x40-
 -130x600
--120x600-
-_120_600_
 -160-600.
 -160x120_
 -160x160.
@@ -108,6 +107,7 @@ _120_600_
 .adaos-ads.
 .adbanner
 .adbard.net/
+.adbasket.net/
 .adbid.pl/
 .adblade.com/
 .adbrite.com/iads/
@@ -649,10 +649,10 @@ _120_600_
 .holyfragger.com/images/skins/
 .homepagle.com/show
 .hopfeed.com/
+.hornypharaoh.com/banner_
 .hotgoos.com/ad/
 .hotkeys.com/
 .hotlog.ru/
-.hornypharaoh.com/banner_
 .hover.in/
 .hsmclick.com/
 .html?wpl=
@@ -1035,13 +1035,13 @@ _120_600_
 .serving-sys.
 .sex-techniques-and-positions.com/banners1a1/
 .sex-techniques-and-positions.com/banners2/
-.sexycelebritygallery.com/mrniceguy.js
 .sexcounter.
 .sexlist.com
 .sexplaycam.com/geobanners/
 .sexplaycam.com/geoprofiles/
 .sextronix.com/ban
 .sexyads
+.sexycelebritygallery.com/mrniceguy.js
 .sexyshare.net//banners/
 .share-server.com/
 .shareasale.com/image/
@@ -1291,7 +1291,6 @@ _120_600_
 /160-600-
 /160_600.
 /160_600_
-/600_120_
 /160x200.jpg
 /160x400-
 /160x400_
@@ -1358,6 +1357,7 @@ _120_600_
 /475x150-
 /480x030_
 /496_98_
+/600_120_
 /600_90_
 /600x90.
 /60x468.
@@ -2487,6 +2487,7 @@ _120_600_
 /vm_ad_feed.php?
 /VPAIDAdRenderer.
 /web_ads/
+/web_banners_
 /webad.aspx?
 /webadImg/
 /webads/
@@ -2677,6 +2678,7 @@ _1000x90_
 _100x480_
 _115x220.
 _120_600.
+_120_600_
 _120x240.
 _120x240_
 _120x480.
@@ -3134,9 +3136,9 @@ http://adsys.
 http://adtag.
 http://adtc.daum.net/
 http://adtech.panthercustomer.com/images/
+http://adtology
 http://adtools.gossipkings.com/
 http://adult-profit-files.com/banner
-http://adtology
 http://adult3dcomics.com/
 http://adultfriendfinder.com/
 http://adultpopunders.com/
@@ -3226,7 +3228,6 @@ http://cash.femjoy.com/
 http://cash4movie.com/bilder/
 http://cashad2
 http://cashtraff.com/selljs/
-http://celebritypink.com/bannedcelebs-
 http://cdn.assets.
 http://cdn.cpmstar.com/
 http://cdn.doubleclick.
@@ -3234,6 +3235,7 @@ http://cdn.eyewonder.com/
 http://cdn.liverail.com/adasset/
 http://cdn.unicast.msn.com/
 http://cdns.webcams.com/e2
+http://celebritypink.com/bannedcelebs-
 http://click.absoluteagency.
 http://click.dtiserv2.com/
 http://click.paran.com/log.html?
@@ -3454,7 +3456,6 @@ http://pussycash.com/Content/Banners/
 http://pwp.netcabo.
 http://qdmil.com/images/
 http://queronamoro.com/banners/
-http://squadedit.com/img/peanuts/
 http://r.radikal.ru/
 http://rad.microsoft.
 http://rcm-uk.amazon.
@@ -3496,6 +3497,7 @@ http://smartad.
 http://spcwm.com/
 http://spe.atdmt.
 http://sponsoredlinks.
+http://squadedit.com/img/peanuts/
 http://squeeder.
 http://squeeder.com/
 http://stat-data.
