--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: iysgXvuN6aYAuIGvODGzqg
+# Checksum: Wj538522D1WahZ8h6HM09w
 # Updated: 23 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3225,6 +3225,7 @@ http://camleyads.info/
 http://cams.spacash.com/
 http://cas.clickability.
 http://cash.femjoy.com/
+http://cash.neweramediaworks.com/
 http://cash4movie.com/bilder/
 http://cashad2
 http://cashtraff.com/selljs/
