--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Wj538522D1WahZ8h6HM09w
+# Checksum: cZ2lvYmR0X/6tIwiFM7sEw
 # Updated: 23 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2954,6 +2954,7 @@ http://75.101.129.47/
 http://75.126.76.32/ads/
 http://77.238.174.11/
 http://83.149.103.111/
+http://84.234.22.104/ads/
 http://85.17.145.107/
 http://87.230.102.24/
 http://88.208.23.
