--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -1341,6 +1341,7 @@
 /wildfire/i/CIMP.gif?
 /wp-click-track/
 /wp-powerstat/
+/wp-useronline/useronline.
 /wp.gif?wpi
 /wp_stat.php?
 /wrapper/quantcast.swf
