--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: cZ2lvYmR0X/6tIwiFM7sEw
+# Checksum: Z5yOVQXs89YAzuD/g4V/wA
 # Updated: 23 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -731,6 +731,7 @@
 .juiceadv.
 .juicyads.
 .juicybucks./promo/
+.justcutegirls.com/banners/
 .justrelevant.com
 .kanoodle.com/
 .kaskus.us/banner/
