--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Z5yOVQXs89YAzuD/g4V/wA
-# Updated: 23 Jul 2010
+# Checksum: /NgvI0YaZkUbWzNEMp5qoQ
+# Updated: 24 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -786,7 +786,6 @@
 .livewords.search.
 .loombo.com/im-ad/
 .loveadverts.com/
-.ltassrv.com
 .lushcrush.
 .luxup.ru/show/
 .lycos.nl/ad/
