remove /afr.php?

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: /NgvI0YaZkUbWzNEMp5qoQ
+# Checksum: t/MLMRKejX8IgvGgB5C8dw
 # Updated: 24 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1776,7 +1776,6 @@
 /affiliates/ban
 /affiliates/images/banners/
 /affilitebanners/
-/afr.php?
 /ajax/ads/
 /ajrotator/
 /ajs.php?
