--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -354,6 +354,7 @@
 .looksmart.com/
 .loomia.com/js/setcookie.
 .losstrack.com/
+.ltassrv.com/track/
 .lycos.com/img/log/
 .lzjl.com/
 .m-pathy.com/
@@ -1507,6 +1508,7 @@ http://flashstats.libsyn.com/
 http://fluctuo.com/
 http://fnlog.
 http://fx.gtop.ro/
+http://geo.ltassrv.com/
 http://geo.yahoo.com/
 http://geoip.
 http://getstatistics.se/
