--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: t/MLMRKejX8IgvGgB5C8dw
+# Checksum: NAU9pPS1fKHta5i0wXZv3Q
 # Updated: 24 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1698,6 +1698,8 @@
 /adserver/
 /Adserver?
 /adserver_
+/adsrv/js/
+/Adsrv/js/
 /adserversolutions/
 /adsframe.
 /adshow-
