--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: NAU9pPS1fKHta5i0wXZv3Q
+# Checksum: O8+bRpncbCzu+pnZipTsnQ
 # Updated: 24 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -786,6 +786,7 @@
 .livewords.search.
 .loombo.com/im-ad/
 .loveadverts.com/
+.ltassrv.com/serve/
 .lushcrush.
 .luxup.ru/show/
 .lycos.nl/ad/
