--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: O8+bRpncbCzu+pnZipTsnQ
+# Checksum: dIc0M/eVxizOP6Ilb4d++Q
 # Updated: 24 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3606,6 +3606,7 @@ http://xban.
 http://xcabin.net/b/
 http://xdev.info/
 http://xfuckbook.com/
+http://xmlconfig.ltassrv.com/
 http://xml.exactseek.com/cgi-bin/js-feed.cgi?id=
 http://xxxvipporno.com/xxxvip.gif
 http://yieldbuild.com/
