--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: dIc0M/eVxizOP6Ilb4d++Q
+# Checksum: GolQB1lmxhfXuOU/j1AfQg
 # Updated: 24 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -193,6 +193,7 @@
 .adshuffle.
 .adskape.ru/
 .adsmarket.com/
+.adsmoon.com/
 .adsonar.com/
 .adspace
 .adstogo.
@@ -1932,7 +1933,7 @@
 /deliver.nmi
 /deliverAd/
 /deliverjs.nmi
-/delivery/afr.pa?
+/delivery/afr.
 /delivery/ag
 /delivery/spc.php?
 /dif/?cid
